--- a/JORGE/datos.bib
+++ b/JORGE/datos.bib
@@ -97,7 +97,34 @@ doi = {10.1038/s41586-019-1014-9}
   year={2013},
   publisher={The Royal Society Publishing}
 }
-
+@article{arute2019quantum,
+  title={Quantum supremacy using a programmable superconducting processor},
+  author={Arute, Frank and Arya, Kunal and Babbush, Ryan and Bacon, Dave and Bardin, Joseph C and Barends, Rami and Biswas, Rupak and Boixo, Sergio and Brandao, Fernando GSL and Buell, David A and others},
+  journal={Nature},
+  volume={574},
+  number={7779},
+  pages={505--510},
+  year={2019},
+  publisher={Nature Publishing Group}
+}
+@article{grozinger2019pathways,
+  title={Pathways to cellular supremacy in biocomputing},
+  author={Grozinger, Lewis and Amos, Martyn and Gorochowski, Thomas E and Carbonell, Pablo and Oyarz{\'u}n, Diego A and Stoof, Ruud and Fellermann, Harold and Zuliani, Paolo and Tas, Huseyin and Go{\~n}i-Moreno, Angel},
+  journal={Nature communications},
+  volume={10},
+  number={1},
+  pages={1--11},
+  year={2019},
+  publisher={Nature Publishing Group}
+}
+@book{johnston2018random,
+  title={Random Number Generators - Principles and Practices: A Guide for Engineers and Programmers},
+  author={Johnston, D.},
+  isbn={9781501515132},
+  url={https://books.google.es/books?id=qxU\_MQAACAAJ},
+  year={2018},
+  publisher={DEG Press}
+}
 @Misc{,
 }
 
