--- a/JORGE/archivo nuevo1.lyx
+++ b/JORGE/archivo nuevo1.lyx
@@ -428,70 +428,68 @@ Learning to protect communications with adversarial neural cryptography
 
 \end_layout
 
-\begin_layout Standard
-Google en 2016, explico a todo el mundo como desarrollar un sistema GAN
- para cifrar las comunicaciones, esto hizo que la investigación sobre este
- area creciera mucho desde ese año hasta ahora.
- 
-\end_layout
-
-\begin_layout Standard
-La solución de Google es la siguiente, es necesario que explique bien este
- sistema ya que todo este trabajo se basa en la modificación de sus sistema
- para poder obtener mejores resultados que su red GAN clásica:
-\end_layout
-
-\begin_layout Standard
-Hay tres redes neuronales GAN:
-\end_layout
-
-\begin_layout Standard
-Alice
-\end_layout
-
-\begin_layout Standard
-La red Alice concatena dos entradas de N-bits (el texto plano y la clave)
- en un vector de entrada 2N, usando -1 y 1 para representar los valores
- de los bits.
- Este vector se procesa a través de una capa FC de 2N×2N, luego enviado
- a través de una sucesión de cuatro capas convolucionales de 1-D.
- Las capas convolucionales se describen en términos de su tamaño de ventana,
- profundidad de entrada y profundidad de salida.
- Cada una tiene un "paso", la cantidad por que la ventana se desplaza a
- cada paso.
- Las capas de hormigón son [4, 1, 2], [2, 2, 4], [1, 4, 4], y con zancadas
- de 1, 2, 1, 1.
- Intuitivamente, la primera capa desliza una ventana de tamaño 4 a través
- de la 2N elementos de salida de la capa FC, emitiendo dos números (profundidad
- de salida 2), con el paso 1.
- Nosotros usar una unidad no lineal sigmoide después de cada capa, excepto
- la última.
- Después de la capa final, donde el la salida se reduce a los elementos
- N, usamos una unidad no lineal de tanh.
- (Recordemos que el tanh tiene una salida entre [-1, 1], llevando los valores
- de vuelta a un rango que puede mapear a valores binarios).
- El La red de Bob es idéntica a la red de Alice La red de Eve sólo toma
- el texto cifrado como entrada, y por lo tanto tiene una primera capa de
- N × 2N FC.
-\end_layout
-
-\begin_layout Standard
-\noindent
-Hay dos sistemas en nuestra implemantación.
- Vamos a crear un sistema de Redes Generativas Antagónicas (GAN) híbrido,
- con un generador cuántico en el interior de una de las redes.
- 
-\end_layout
-
-\begin_layout Standard
-\noindent
-Hay 3 redes neuronales Alice, Bob y Eve.
- Las tres van a tener la misma configuración, por simplicidad y por
-\end_layout
-
 \begin_layout Subsection
 \noindent
 Deepfakes.
+\end_layout
+
+\begin_layout Standard
+\begin_inset Graphics
+	filename /root/Escritorio/Quantum/assets/gan_diagram.svg
+	width 8cm
+	height 8cm
+	groupId graficos
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Esquema de un sistema GAN.
+ Imagen extraída de 
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+cite{GanGoogle}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Graphics
+	filename /root/Escritorio/Quantum/assets/qgan.png
+	width 8cm
+	height 8cm
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Esquema de un sistema QGAN.
+ Imagen extraída de 
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+cite{PennylaneImagen}
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Subsection
@@ -513,6 +511,14 @@ ones, que al fin y al cabo es nuestro objetivo a desarrollar en este trabajo.
  La otra vertiente es la potencialidad del mapeo logístico que tiene utilidades
  para la generación de números pseudo-aleatorios.
  Su investigación fue básicamente:
+\end_layout
+
+\begin_layout Subsection
+GAN cuántica.
+\end_layout
+
+\begin_layout Subsection
+Criptografía de curva elíptica.
 \end_layout
 
 \begin_layout Section
@@ -692,15 +698,6 @@ cite{Qiskit-Textbook}
 .
 \end_layout
 
-\begin_layout Standard
-\begin_inset Graphics
-	filename pegado4.png
-
-\end_inset
-
-
-\end_layout
-
 \begin_layout Subsubsection
 Puertas cuánticas
 \end_layout
@@ -794,6 +791,113 @@ La puerta de Hadamard es la versión de un qubit de la transformada cuántica
 \end_layout
 
 \begin_layout Standard
+También hay puertas lógicas cuánticas que actuan sobre más de un qubit.
+\end_layout
+
+\begin_layout Standard
+Una puerta lógica muy utilizada es la puerta CNOT.
+ Si el primer qubit es 
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+|1
+\backslash
+rangle
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+, entonces en el segundo qubit se le aplica una puerta NOT.
+ 
+\end_layout
+
+\begin_layout Itemize
+Puerta CNOT (Respecto de las bases 
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+|00
+\backslash
+rangle
+\end_layout
+
+\end_inset
+
+, 
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+|01
+\backslash
+rangle
+\end_layout
+
+\end_inset
+
+, 
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+|10
+\backslash
+rangle
+\end_layout
+
+\end_inset
+
+, 
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+|11
+\backslash
+rangle
+\end_layout
+
+\end_inset
+
+) :
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula 
+\begin{equation}
+CNOT=cX=\begin{pmatrix}1 & 0 & 0 & 0\\
+0 & 1 & 0 & 0\\
+0 & 0 & 0 & 1\\
+0 & 0 & 1 & 0
+\end{pmatrix}
+\end{equation}
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Itemize
+Puerta Toffoli.
+\end_layout
+
+\begin_layout Standard
+Concepto de universalidad.
+ Máquina de Turing.
+\end_layout
+
+\begin_layout Standard
 \noindent
 \align center
 \begin_inset Graphics
@@ -816,8 +920,21 @@ Esquema de encapsulación entre los diferentes conceptos de la computación
 Aprendizaje máquina cuántico
 \end_layout
 
+\begin_layout Standard
+\begin_inset Graphics
+	filename pegado4.png
+
+\end_inset
+
+
+\end_layout
+
 \begin_layout Subsection
 Criptografía
+\end_layout
+
+\begin_layout Subsubsection
+Introducción
 \end_layout
 
 \begin_layout Standard
@@ -832,7 +949,7 @@ Hay que destacar que, a pesar de los siglos, los sistemas de cifrado clásicos
 \begin_layout Standard
 \noindent
 Pero los principios en los que se basan para conseguir su objetivo de enmascarar
- la información siguen siendo los mismos, la difusión y la confusión
+ la información siguen siendo los mismos, la difusión y la confusión.
 \end_layout
 
 \begin_layout Standard
@@ -844,7 +961,7 @@ La invención de la criptografía asimétrica, también conocida como criptograf
  secreto.
  Alice puede cifrar un mensaje usando la clave pública de Bob, pero solo
  Bob puede descifrarlo usando su clave privada.
- 
+ Aunque en nuestro estudio vamos a utilizar la criptografía simétrica.
 \end_layout
 
 \begin_layout Standard
@@ -916,41 +1033,28 @@ Las computadoras cuánticas también presentan otra ventaja extraordinaria,
 Teoría de números aleatorios
 \end_layout
 
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+cite{johnston2018random}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
 \begin_layout Subsection
 Redes neuronales
 \end_layout
 
 \begin_layout Standard
-Partiendo de que una red neuronal cuántica es cualquier circuito cuántico
- con parámetros continuos entrenables.
-\end_layout
-
-\begin_layout Standard
-Pues aquí hablaré de seguridad informática, de criptografía.
-\end_layout
-
-\begin_layout Standard
-De computación cuántica.
-\end_layout
-
-\begin_layout Standard
-De teoría de número aleatorios.
-\end_layout
-
-\begin_layout Standard
-De redes neuronales.
-\end_layout
-
-\begin_layout Standard
-De GAN.
-\end_layout
-
-\begin_layout Standard
-Hay dos maneras de realizar un algoritmo de aprendizaje automático cuánticoEn
- lugar de simular una computadora cuántica dentro del software de aprendizaje
- automático convencional, tomaríamos todas las mejores características del
- software de aprendizaje profundo y las haríamos verdaderamente nativas
- de los dispositivos cuánticos.
+Hay que ver que pongo aquí.
 \end_layout
 
 \begin_layout Section
@@ -1366,27 +1470,24 @@ Vemos que el sueldo del Jefe de Proyectos y el desarollador de redes neuronales
 Análisis teórico.
 \end_layout
 
-\begin_layout Standard
-\noindent
-[Comienzo a definir la red neuronal].
+\begin_layout Subsection
+Introducción al algoritmo
 \end_layout
 
 \begin_layout Standard
-\noindent
-El sistema generador cuántico funciona de la siguiente manera:
+El estudio consiste en comparar diferentes tipos de redes neuronales cuánticas
+ y redes neuronales no cuánticas para ver cual de ellas tiene un mejor desempeño
+ y unas mejores características.
 \end_layout
 
 \begin_layout Standard
-Puerta de NOP:
+La arquitectura base es la arquitectura que Google diseñó en 2016.
+ Para ello construimos tres redes neuronales que son Alice, Eve y Bob.
 \end_layout
 
 \begin_layout Standard
-\begin_inset Formula 
-\begin{equation}
-NOT=\begin{pmatrix}0 & 1\\
-1 & 0
-\end{pmatrix}
-\end{equation}
+\begin_inset Graphics
+	filename pegado11.png
 
 \end_inset
 
@@ -1394,20 +1495,92 @@ NOT=\begin{pmatrix}0 & 1\\
 \end_layout
 
 \begin_layout Standard
-Puerta de Hadamard:
+Esquema del sistema de redes neuronales.
 \end_layout
 
 \begin_layout Standard
-Esta puerta consiste en aplicar al estado 
-\begin_inset Formula 
-\begin{equation}
-H=\frac{1}{\sqrt{2}}\begin{pmatrix}1 & 1\\
-1 & -1
-\end{pmatrix}
-\end{equation}
+Alice quiere enviar un mensaje a Bob pero Eve capta el mensaje, entonces
+ queremos que Eve no sea capaz de descifrar el mensaje de Alice.
+ Para ello Alice y Bob comparten una clave.
+ 
+\end_layout
+
+\begin_layout Standard
+Siguiendo el trabajo de Google, utilizaremos mensajes de 16 bits y claves
+ secretas y textos cifrados de 16 bits.
+\end_layout
+
+\begin_layout Standard
+La red de Alice necesitará tener dos vectores de entrada: el mensaje a cifrar
+ y la clave secreta.
+\end_layout
+
+\begin_layout Standard
+La red de Bob tendrá también dos vectores de entrada: el mensaje cifrado
+ y la clave secreta.
+\end_layout
+
+\begin_layout Standard
+La rede Eve solo recibirá el mensaje cifrado.
+\end_layout
+
+\begin_layout Standard
+Diferentes tipos de aquitecturas a estudiar.
+\end_layout
+
+\begin_layout Standard
+\begin_inset Graphics
+	filename pegado10.png
 
 \end_inset
 
+
+\end_layout
+
+\begin_layout Standard
+Arquitectura HQGAN con un único nodo cuántico.
+\end_layout
+
+\begin_layout Standard
+\begin_inset Graphics
+	filename pegado12.png
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Arquitectura HQGAN con dos nodos cuánticos.
+\end_layout
+
+\begin_layout Standard
+\begin_inset Graphics
+	filename pegado9.png
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Arquitectura HQGAN con cuatro nodos cuańticos.
+\end_layout
+
+\begin_layout Standard
+\begin_inset Graphics
+	filename pegado13.png
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Arquitectura QGAN 
+\end_layout
+
+\begin_layout Standard
 
 \end_layout
 
@@ -1416,66 +1589,28 @@ Fundamento del algoritmo
 \end_layout
 
 \begin_layout Standard
-\begin_inset Graphics
-	filename /root/Escritorio/Quantum/assets/gan_diagram.svg
-	width 8cm
-	height 8cm
-	groupId graficos
+Para el explicar el fundamento del algoritmo pienso que lo más sencillo
+ es dividir el algoritmo en tres partes.
+\end_layout
 
-\end_inset
+\begin_layout Subsubsection
+Parte cuántica.
+\end_layout
 
-
+\begin_layout Subsubsection
+Redes neuronales.
 \end_layout
 
 \begin_layout Standard
-Esquema de un sistema GAN.
- Imagen extraída de 
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-
-\backslash
-cite{GanGoogle}
+dsd
 \end_layout
 
-\end_inset
-
-
+\begin_layout Subsubsection
+Integración de las partes.
 \end_layout
 
 \begin_layout Standard
-\begin_inset Graphics
-	filename /root/Escritorio/Quantum/assets/qgan.png
-	width 8cm
-	height 8cm
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
-Esquema de un sistema QGAN.
- Imagen extraída de 
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-
-\backslash
-cite{PennylaneImagen}
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
-Para ralizar todo esto es muy importante una función que nos permita unir
+Para raelizar todo esto es muy importante una función que nos permita unir
  los circuitos cuánticos con las redes neuronales, para eso contamos con:
 \end_layout
 
@@ -1490,7 +1625,7 @@ Propuesta de implementación
 \end_layout
 
 \begin_layout Standard
-Como deciamos anteriormente nos basamos en el experimento de Google Brain,
+[Como deciamos anteriormente nos basamos en el experimento de Google Brain,
  ellos realizan el algoritmo de la siguiente manera.
 \end_layout
 
@@ -1558,7 +1693,12 @@ Hay dos sistemas en nuestra implemantación.
 \begin_layout Standard
 \noindent
 Hay 3 redes neuronales Alice, Bob y Eve.
- Las tres van a tener la misma configuración, por simplicidad y por
+ Las tres van a tener la misma configuración, por simplicidad y por]
+\end_layout
+
+\begin_layout Standard
+Copiado del artículo.
+ Hay que mirar como hacerlo.
 \end_layout
 
 \begin_layout Section
@@ -1692,6 +1832,10 @@ w.
 \begin_layout Section
 \noindent
 Evaluación.
+\end_layout
+
+\begin_layout Standard
+Para 
 \end_layout
 
 \begin_layout Standard
