--- a/JORGE/datos.bib
+++ b/JORGE/datos.bib
@@ -125,6 +125,18 @@ doi = {10.1038/s41586-019-1014-9}
   year={2018},
   publisher={DEG Press}
 }
+
+@article{coutinho2018learning,
+  title={Learning perfectly secure cryptography to protect communications with adversarial neural cryptography},
+  author={Coutinho, Murilo and de Oliveira Albuquerque, Robson and Borges, F{\'a}bio and Garcia Villalba, Luis Javier and Kim, Tai-Hoon},
+  journal={Sensors},
+  volume={18},
+  number={5},
+  pages={1306},
+  year={2018},
+  publisher={Multidisciplinary Digital Publishing Institute}
+}
+
 @Misc{,
 }
 
