--- a/JORGE/Quantum_Cryptography2.ipynb
+++ b/JORGE/Quantum_Cryptography2.ipynb
@@ -380,7 +380,8 @@
     "    result_key_so = list(result_so.get_counts(send_over).keys())\n",
     "    Bob_result += result_key_so[0][::-1]\n",
     "    \n",
-    "print(\"Bob's results: \", Bob_result)"
+    "print(\"Bob's results: \", Bob_result)\n",
+    "#101011111010111101110110111100001"
    ]
   },
   {
@@ -881,7 +882,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
