--- a/JORGE/datos.bib
+++ b/JORGE/datos.bib
@@ -24,6 +24,12 @@
   year={2020},
   publisher={Springer}
 }
+@inproceedings{bennett1984quantum,
+  title={Quantum cryptography: Public key distribution and con tos5},
+  author={Bennett, Charles H and Brassard, Gilles},
+  booktitle={Proceedings of the International Conference on Computers, Systems and Signal Processing},
+  year={1984}
+}
 
 %Carlos Sánchez del Río
 @@book{rio2016fisica,
