--- a/CodigosCuanticos/ProtocoloCuantico.ipynb
+++ b/CodigosCuanticos/ProtocoloCuantico.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -105,46 +105,43 @@
      "output_type": "stream",
      "text": [
       "Circuit:\n",
-      "(0, 0): ───H───M───\n",
+      "(0, 0): ───H───M('m')───\n",
       "               │\n",
-      "(1, 0): ───H───M───\n",
+      "(1, 0): ───H───M────────\n",
       "               │\n",
-      "(2, 0): ───H───M───\n",
+      "(2, 0): ───H───M────────\n",
       "               │\n",
-      "(3, 0): ───H───M───\n",
+      "(3, 0): ───H───M────────\n",
       "               │\n",
-      "(4, 0): ───H───M───\n",
+      "(4, 0): ───H───M────────\n",
       "               │\n",
-      "(5, 0): ───H───M───\n",
+      "(5, 0): ───H───M────────\n",
       "               │\n",
-      "(6, 0): ───H───M───\n",
+      "(6, 0): ───H───M────────\n",
       "               │\n",
-      "(7, 0): ───H───M───\n",
+      "(7, 0): ───H───M────────\n",
       "               │\n",
-      "(8, 0): ───H───M───\n",
+      "(8, 0): ───H───M────────\n",
       "               │\n",
-      "(9, 0): ───H───M───\n",
+      "(9, 0): ───H───M────────\n",
       "Results:\n",
-      "(0, 0),(1, 0),(2, 0),(3, 0),(4, 0),(5, 0),(6, 0),(7, 0),(8, 0),(9, 0)=1, 0, 0, 1, 0, 1, 0, 1, 1, 1\n",
-      "   (0, 0),(1, 0),(2, 0),(3, 0),(4, 0),(5, 0),(6, 0),(7, 0),(8, 0),(9, 0)\n",
-      "0                                                599                    \n",
-      "a:    (0, 0),(1, 0),(2, 0),(3, 0),(4, 0),(5, 0),(6, 0),(7, 0),(8, 0),(9, 0)\n",
-      "0                                                599                    \n",
-      "   (0, 0),(1, 0),(2, 0),(3, 0),(4, 0),(5, 0),(6, 0),(7, 0),(8, 0),(9, 0)\n",
-      "0                                           0.585533                    \n",
-      "Numero aleatorio   (0, 0),(1, 0),(2, 0),(3, 0),(4, 0),(5, 0),(6, 0),(7, 0),(8, 0),(9, 0)\n",
-      "0                                           0.585533                    \n"
+      "m=1, 0, 0, 1, 0, 1, 0, 1, 1, 0\n",
+      "     m\n",
+      "0  598\n"
      ]
     }
    ],
    "source": [
+    "\n",
+    "\n",
+    "\n",
     "qubits = [cirq.GridQubit(i, 0) for i in range(10)]\n",
     "circuit = cirq.Circuit(\n",
     "  \n",
     "  #cirq.H(*qubits),\n",
     "  cirq.H.on_each(*qubits),\n",
     " \n",
-    "  cirq.measure(*qubits)\n",
+    "  cirq.measure(*qubits, key='m')\n",
     ")\n",
     "print(\"Circuit:\")\n",
     "print(circuit)\n",
@@ -156,16 +153,30 @@
     "print(\"Results:\")\n",
     "print(result)\n",
     "print(result.data)\n",
-    "a= result.data\n",
+    "a= result.measurements\n",
     "\n",
     "#con 10 bits tenemos 1024 números \n",
     "\n",
     "#Lo normalizamos para que nos aparezcan valores de 0 a 1.\n",
     "#Cuantos más qubits tengamos mejor precisión obtendremos.\n",
-    "print('a:', a)\n",
-    "numeroAleatorio=a*1/1023\n",
-    "print(numeroAleatorio)\n",
-    "print(\"Numero aleatorio\"+ str(numeroAleatorio))"
+    "\n",
+    "#numeroAleatorio=a*1/1023\n",
+    "#print(numeroAleatorio)\n",
+    "cosa=\"\"\n",
+    "for i in a['m']:\n",
+    "    cosa=i\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pasos 2-4: Enviar los Qubits de Alice a Bob\n",
+    "Alice convierte sus bits clave en los correspondientes estados qubits. Si un bit es un 0, preparará un qubit en el eje negativo z. Si el bit es un 1, preparará un qubit en el eje z positivo. A continuación, si Alice tiene un 1 en su cadena de rotación, rota su qubit clave con una puerta Hadamard. Luego envía el qubit a Bob. Si Bob tiene un 1 en su cadena de rotación, rota el qubit entrante en la dirección opuesta con una puerta Hadamard. Bob entonces mide el estado del qubit y registra el resultado. El circuito cuántico de abajo ejecuta cada uno de estos pasos\n",
+    "\n",
+    "Traducción realizada con la versión gratuita del traductor www.DeepL.com/Translator"
    ]
   }
  ],
