--- a/JORGE/GANpruebaConRandomValues-Copy1.ipynb
+++ b/JORGE/GANpruebaConRandomValues-Copy1.ipynb
@@ -9,22 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-10-24T17:54:08.549521Z",
      "start_time": "2018-10-24T17:54:08.541543Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "\n",
@@ -41,18 +33,19 @@
     "from keras.layers import LeakyReLU\n",
     "\n",
     "import pydot\n",
+    "import tensorflow as tf\n",
     "from tensorflow import keras\n",
     "\n",
-    "from keras.utils.vis_utils import plot_model\n",
-    "from keras import backend as K\n",
-    "from keras.models import Model\n",
-    "from keras.engine.input_layer import Input\n",
-    "from keras.layers.core import Activation, Dense\n",
-    "from keras.layers import Flatten, Reshape\n",
-    "from keras.layers.convolutional import Conv1D\n",
-    "from keras.layers.merge import concatenate\n",
-    "from keras.optimizers import Adam, RMSprop\n",
-    "from keras.models import load_model\n",
+    "#from tensorflow.keras.utils.vis_utils import plot_model\n",
+    "from tensorflow.keras import backend as K\n",
+    "from tensorflow.keras.models import Model\n",
+    "#from tensorflow.keras.layers.InputLayer import Input\n",
+    "from tensorflow.keras.layers import Activation, Dense, Input\n",
+    "from tensorflow.keras.layers import Flatten, Reshape\n",
+    "from tensorflow.keras.layers import Conv1D\n",
+    "from tensorflow.keras.layers import concatenate\n",
+    "from tensorflow.keras.optimizers import Adam, RMSprop\n",
+    "from tensorflow.keras.models import load_model\n",
     "\n",
     "############# Librerias Qiskit ############\n",
     "\n",
@@ -67,7 +60,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-10-24T16:55:24.834360Z",
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-10-24T17:40:45.280385Z",
@@ -173,36 +173,36 @@
       "__________________________________________________________________________________________________\n",
       "Layer (type)                    Output Shape         Param #     Connected to                     \n",
       "==================================================================================================\n",
-      "input_3 (InputLayer)            (None, 16)           0                                            \n",
+      "input_3 (InputLayer)            [(None, 16)]         0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "input_4 (InputLayer)            (None, 16)           0                                            \n",
+      "input_4 (InputLayer)            [(None, 16)]         0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "concatenate_2 (Concatenate)     (None, 32)           0           input_3[0][0]                    \n",
+      "concatenate_1 (Concatenate)     (None, 32)           0           input_3[0][0]                    \n",
       "                                                                 input_4[0][0]                    \n",
       "__________________________________________________________________________________________________\n",
-      "dense_2 (Dense)                 (None, 32)           1056        concatenate_2[0][0]              \n",
+      "dense_1 (Dense)                 (None, 32)           1056        concatenate_1[0][0]              \n",
       "__________________________________________________________________________________________________\n",
-      "activation_6 (Activation)       (None, 32)           0           dense_2[0][0]                    \n",
+      "activation_5 (Activation)       (None, 32)           0           dense_1[0][0]                    \n",
       "__________________________________________________________________________________________________\n",
-      "reshape_2 (Reshape)             (None, 32, 1)        0           activation_6[0][0]               \n",
+      "reshape_1 (Reshape)             (None, 32, 1)        0           activation_5[0][0]               \n",
       "__________________________________________________________________________________________________\n",
-      "conv1d_5 (Conv1D)               (None, 32, 2)        10          reshape_2[0][0]                  \n",
+      "conv1d_4 (Conv1D)               (None, 32, 2)        10          reshape_1[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "activation_7 (Activation)       (None, 32, 2)        0           conv1d_5[0][0]                   \n",
+      "activation_6 (Activation)       (None, 32, 2)        0           conv1d_4[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "conv1d_5 (Conv1D)               (None, 16, 4)        20          activation_6[0][0]               \n",
+      "__________________________________________________________________________________________________\n",
+      "activation_7 (Activation)       (None, 16, 4)        0           conv1d_5[0][0]                   \n",
       "__________________________________________________________________________________________________\n",
       "conv1d_6 (Conv1D)               (None, 16, 4)        20          activation_7[0][0]               \n",
       "__________________________________________________________________________________________________\n",
       "activation_8 (Activation)       (None, 16, 4)        0           conv1d_6[0][0]                   \n",
       "__________________________________________________________________________________________________\n",
-      "conv1d_7 (Conv1D)               (None, 16, 4)        20          activation_8[0][0]               \n",
+      "conv1d_7 (Conv1D)               (None, 16, 1)        5           activation_8[0][0]               \n",
       "__________________________________________________________________________________________________\n",
-      "activation_9 (Activation)       (None, 16, 4)        0           conv1d_7[0][0]                   \n",
+      "activation_9 (Activation)       (None, 16, 1)        0           conv1d_7[0][0]                   \n",
       "__________________________________________________________________________________________________\n",
-      "conv1d_8 (Conv1D)               (None, 16, 1)        5           activation_9[0][0]               \n",
-      "__________________________________________________________________________________________________\n",
-      "activation_10 (Activation)      (None, 16, 1)        0           conv1d_8[0][0]                   \n",
-      "__________________________________________________________________________________________________\n",
-      "flatten_2 (Flatten)             (None, 16)           0           activation_10[0][0]              \n",
+      "flatten_1 (Flatten)             (None, 16)           0           activation_9[0][0]               \n",
       "==================================================================================================\n",
       "Total params: 1,111\n",
       "Trainable params: 1,111\n",
@@ -212,35 +212,35 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "input_5 (InputLayer)         (None, 16)                0         \n",
+      "input_5 (InputLayer)         [(None, 16)]              0         \n",
       "_________________________________________________________________\n",
-      "dense_3 (Dense)              (None, 32)                544       \n",
+      "dense_2 (Dense)              (None, 32)                544       \n",
+      "_________________________________________________________________\n",
+      "activation_10 (Activation)   (None, 32)                0         \n",
+      "_________________________________________________________________\n",
+      "dense_3 (Dense)              (None, 32)                1056      \n",
       "_________________________________________________________________\n",
       "activation_11 (Activation)   (None, 32)                0         \n",
       "_________________________________________________________________\n",
-      "dense_4 (Dense)              (None, 32)                1056      \n",
+      "reshape_2 (Reshape)          (None, 32, 1)             0         \n",
       "_________________________________________________________________\n",
-      "activation_12 (Activation)   (None, 32)                0         \n",
+      "conv1d_8 (Conv1D)            (None, 32, 2)             10        \n",
       "_________________________________________________________________\n",
-      "reshape_3 (Reshape)          (None, 32, 1)             0         \n",
+      "activation_12 (Activation)   (None, 32, 2)             0         \n",
       "_________________________________________________________________\n",
-      "conv1d_9 (Conv1D)            (None, 32, 2)             10        \n",
+      "conv1d_9 (Conv1D)            (None, 16, 4)             20        \n",
       "_________________________________________________________________\n",
-      "activation_13 (Activation)   (None, 32, 2)             0         \n",
+      "activation_13 (Activation)   (None, 16, 4)             0         \n",
       "_________________________________________________________________\n",
       "conv1d_10 (Conv1D)           (None, 16, 4)             20        \n",
       "_________________________________________________________________\n",
       "activation_14 (Activation)   (None, 16, 4)             0         \n",
       "_________________________________________________________________\n",
-      "conv1d_11 (Conv1D)           (None, 16, 4)             20        \n",
+      "conv1d_11 (Conv1D)           (None, 16, 1)             5         \n",
       "_________________________________________________________________\n",
-      "activation_15 (Activation)   (None, 16, 4)             0         \n",
+      "activation_15 (Activation)   (None, 16, 1)             0         \n",
       "_________________________________________________________________\n",
-      "conv1d_12 (Conv1D)           (None, 16, 1)             5         \n",
-      "_________________________________________________________________\n",
-      "activation_16 (Activation)   (None, 16, 1)             0         \n",
-      "_________________________________________________________________\n",
-      "flatten_3 (Flatten)          (None, 16)                0         \n",
+      "flatten_2 (Flatten)          (None, 16)                0         \n",
       "=================================================================\n",
       "Total params: 1,655\n",
       "Trainable params: 1,655\n",
