--- a/JORGE/anuevo.lyx
+++ b/JORGE/anuevo.lyx
@@ -499,7 +499,7 @@ Deepfakes.
 
 \begin_layout Standard
 \begin_inset Graphics
-	filename /root/Escritorio/Quantum/assets/gan_diagram.svg
+	filename C:/root/Escritorio/Quantum/assets/gan_diagram.svg
 	scale 25
 	groupId graficos
 
@@ -528,7 +528,7 @@ cite{GanGoogle}
 
 \begin_layout Standard
 \begin_inset Graphics
-	filename /root/Escritorio/Quantum/assets/qgan.png
+	filename C:/root/Escritorio/Quantum/assets/qgan.png
 	scale 40
 
 \end_inset
@@ -737,7 +737,7 @@ Un circuito cuántico es una serie de operaciones aplicadas a qubits que
 \noindent
 \align center
 \begin_inset Graphics
-	filename /root/Escritorio/Quantum/assets/800px-Bloch_sphere.svg.png
+	filename C:/root/Escritorio/Quantum/assets/800px-Bloch_sphere.svg.png
 	scale 25
 	groupId graficos
 
@@ -775,7 +775,7 @@ Para manipular una entrada necesitamos aplicar las operaciones básicas de
 \noindent
 \align center
 \begin_inset Graphics
-	filename /root/Escritorio/Quantum/JORGE/QiskitCircuit.png
+	filename C:/root/Escritorio/Quantum/JORGE/QiskitCircuit.png
 	scale 25
 	groupId graficos
 
@@ -1005,7 +1005,7 @@ Concepto de universalidad.
 \noindent
 \align center
 \begin_inset Graphics
-	filename /root/Escritorio/Quantum/assets/Puerta cuántica.png
+	filename C:/root/Escritorio/Quantum/assets/Puerta cuántica.png
 	scale 25
 	groupId graficos
 
@@ -1154,11 +1154,11 @@ Redes neuronales
 \end_layout
 
 \begin_layout Subsubsection
-Aspectos básicos
+Redes neuronales clásicas
 \end_layout
 
 \begin_layout Subsubsection
-Redes convolucionales
+Redes neuronales profundas.
 \end_layout
 
 \begin_layout Section
@@ -1573,9 +1573,13 @@ Tengo más o menos desarrollado esta parte.
 —————————————————————->
 \end_layout
 
+\begin_layout Standard
+Gestión de riesgos.
+\end_layout
+
 \begin_layout Section
 \noindent
-Análisis teórico.
+Desarrollo teórico.
 \end_layout
 
 \begin_layout Subsection
@@ -1694,10 +1698,6 @@ Arquitectura HQGAN con cuatro nodos cuańticos con un canal cuántico.
 
 \begin_layout Standard
 Arquitectura QGAN 
-\end_layout
-
-\begin_layout Standard
-
 \end_layout
 
 \begin_layout Subsection
@@ -2406,6 +2406,26 @@ Para realizar nuestros experimentos vamos a hacer uso de las siguientes
  herramientas:
 \end_layout
 
+\begin_layout Standard
+Lenguaje: Python
+\end_layout
+
+\begin_layout Standard
+Ide: Anaconda
+\end_layout
+
+\begin_layout Standard
+Entorno Hardware: Colab
+\end_layout
+
+\begin_layout Standard
+Gestión de la configuración: Github
+\end_layout
+
+\begin_layout Standard
+Simulador cuántico: Cirq.
+\end_layout
+
 \begin_layout Itemize
 Anaconda: Anaconda es una distribución gratuita y de código abierto de los
  lenguajes de programación Python y R para la informática científica (ciencia
@@ -2482,6 +2502,14 @@ Tensorflow.
 \begin_layout Section
 \noindent
 Implementación.
+\end_layout
+
+\begin_layout Standard
+Circuitos cuánticos gráficos.
+\end_layout
+
+\begin_layout Subsection
+Dificultades
 \end_layout
 
 \begin_layout Standard
