--- a/JORGE/anuevo.lyx
+++ b/JORGE/anuevo.lyx
@@ -357,7 +357,7 @@ cite{grozinger2019pathways}
 
 \begin_layout Standard
 \begin_inset Graphics
-	filename pegado2.png
+	filename imagenarnADN.png
 
 \end_inset
 
@@ -499,8 +499,8 @@ Deepfakes.
 
 \begin_layout Standard
 \begin_inset Graphics
-	filename C:/root/Escritorio/Quantum/assets/gan_diagram.svg
-	scale 25
+	filename C:/Users/Jorge/Desktop/Quantum/assets/gan_diagram.svg
+	scale 5
 	groupId graficos
 
 \end_inset
@@ -528,7 +528,7 @@ cite{GanGoogle}
 
 \begin_layout Standard
 \begin_inset Graphics
-	filename C:/root/Escritorio/Quantum/assets/qgan.png
+	filename C:/Users/Jorge/Desktop/Quantum/assets/qgan.png
 	scale 40
 
 \end_inset
@@ -648,6 +648,10 @@ En la computación cuántica se trata con el equivalente de bits llamados
  
 \end_layout
 
+\begin_layout Subsubsection*
+Hola
+\end_layout
+
 \begin_layout Standard
 \begin_inset Formula 
 \begin{equation}
@@ -737,8 +741,8 @@ Un circuito cuántico es una serie de operaciones aplicadas a qubits que
 \noindent
 \align center
 \begin_inset Graphics
-	filename C:/root/Escritorio/Quantum/assets/800px-Bloch_sphere.svg.png
-	scale 25
+	filename C:/Users/Jorge/Desktop/Quantum/assets/800px-Bloch_sphere.svg.png
+	scale 5
 	groupId graficos
 
 \end_inset
@@ -775,8 +779,8 @@ Para manipular una entrada necesitamos aplicar las operaciones básicas de
 \noindent
 \align center
 \begin_inset Graphics
-	filename C:/root/Escritorio/Quantum/JORGE/QiskitCircuit.png
-	scale 25
+	filename QiskitCircuit.png
+	scale 5
 	groupId graficos
 
 \end_inset
@@ -989,6 +993,22 @@ CNOT=cX=\begin{pmatrix}1 & 0 & 0 & 0\\
 
 \end_inset
 
+ Tof
+\begin_inset Formula 
+\begin{equation}
+CCNOT=\begin{pmatrix}1 & 0 & 0 & 0 & 0 & 0 & 0 & 0\\
+0 & 1 & 0 & 0 & 0 & 0 & 0 & 0\\
+0 & 0 & 1 & 0 & 0 & 0 & 0 & 0\\
+0 & 0 & 0 & 1 & 0 & 0 & 0 & 0\\
+0 & 0 & 0 & 0 & 1 & 0 & 0 & 0\\
+0 & 0 & 0 & 0 & 0 & 1 & 0 & 0\\
+0 & 0 & 0 & 0 & 0 & 0 & 0 & 1\\
+0 & 0 & 0 & 0 & 0 & 0 & 1 & 0
+\end{pmatrix}
+\end{equation}
+
+\end_inset
+
 
 \end_layout
 
@@ -1005,8 +1025,8 @@ Concepto de universalidad.
 \noindent
 \align center
 \begin_inset Graphics
-	filename C:/root/Escritorio/Quantum/assets/Puerta cuántica.png
-	scale 25
+	filename C:/Users/Jorge/Desktop/Quantum/assets/Puerta cuántica.png
+	scale 5
 	groupId graficos
 
 \end_inset
